@@ -1,3 +1,7 @@
+2023-10-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test05-expand-file-name-tilde): New test.
+
 2023-09-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test17-insert-directory): Improve check.
